[package]
name = "d2r_ust"
version = "0.1.0"
authors = ["Prunkton <prunkton@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scrap = "0.5"
enigo = { path = "../enigo", git = "https://github.com/prunkton/enigo" }
